[project]
name = "llm-app-cost"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "streamlit (>=1.42.0,<2.0.0)",
    "tiktoken (>=0.8.0,<0.9.0)",
    "matplotlib (>=3.8.0,<4.0.0)"
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
